--- a/_work/statistics/statistics.match.html
+++ b/_work/statistics/statistics.match.html
@@ -3,7 +3,7 @@
   <div class="match_container">
   <table class="match" cellspacing="0" cellpadding="2" border="1">
     <tr>
-      <th>&nbsp;</th>
+      <th colspan="3">&nbsp;</th>
       <th colspan="2" class="left">1. Satz</th>
       <th colspan="2" class="left">2. Satz</th>
       <th colspan="2" class="left">3. Satz</th>
@@ -13,7 +13,7 @@
       <th colspan="4" class="left">Gesamt</th>
     </tr>
     <tr>
-      <th>&nbsp;</th>
+      <th colspan="3">&nbsp;</th>
       <th class="center">+</th><th class="center">-</th>
       <th class="center">+</th><th class="center">-</th>
       <th class="center">+</th><th class="center">-</th>
