--- a/_work/statistics/statistics.player.html
+++ b/_work/statistics/statistics.player.html
@@ -1,5 +1,7 @@
 <tr class="{{type}}">
+  <td class="nr">{{nr}}</td>
   <td class="name">{{name}}</td>
+  <td class="type">{{player_type}}</td>
   <td class="right">{{p1}}</td><td class="right">{{m1}}</td>
   <td class="right">{{p2}}</td><td class="right">{{m2}}</td>
   <td class="right">{{p3}}</td><td class="right">{{m3}}</td>
