--- a/ov.html
+++ b/ov.html
@@ -456,9 +456,11 @@ function removeClass(elem, clazz) {
         <a id="info16" href="/info/u16.html"><h3>Infos</h3></a>
         <a id="system6" href="/system6/"><h3>Spielsystem</h3></a>
         <a id="training_b" href="presence.html?key=b" class="locked_3"><h3>Anwesenheit</h3></a>
-        <a id="tagebuch_b" href="diary.html?key=b" class="locked_1"><h3>Trainingstagebuch</h3></a>
+        <a id="tagebuch_b" href="diary.html?key=b" class="locked_3"><h3>Trainingstagebuch</h3></a>
+        <a id="zeiten_b" href="/training/zeiten_b.html" class="locked_3"><h3>Trainingszeiten</h3></a>
 
         <a id="schedule_u16_21_1" href="schedule.html?key=u16_21_1"><h3>Spieltermine</h3></a>
+        <a id="players_u16_21_1" href="players.html?key=u16_21_1"><h3>Spielerinnen</h3></a>
       </div>
 
       <h2 id="u18_21" class="expandable">U18 - Jugend weiblich</h2>
