--- a/ov.html
+++ b/ov.html
@@ -519,7 +519,7 @@ function removeClass(elem, clazz) {
         <a id="standings_br1sp_21" href="standings.html?key=br1sp_21"><h3>Tabelle</h3></a>
         <a id="players_br1sp_21" href="players.html?key=br1sp_21"><h3>Spielerinnen</h3></a>
 
-        <a id="schedule_br1cup_21" href="schedule.html?key=br1cup_21"><h3>Spieltermine (Cup)</h3></a>
+        <!--a id="schedule_br1cup_21" href="schedule.html?key=br1cup_21"><h3>Spieltermine (Cup)</h3></a-->
         <a id="results_br1cup_21" href="results.html?key=br1cup_21"><h3>Ergebnisse (Cup)</h3></a>
 
         <a id="standings_br1g_21" href="standings.html?key=br1g_21"><h3>Tabelle (Herbst)</h3></a>
