--- a/ov.html
+++ b/ov.html
@@ -402,7 +402,7 @@ function removeClass(elem, clazz) {
 <body onload="init();">
   <nav id="nav" role="navigation">
 
-    <h1 id="intern" class="expandable locked_0" style=""><br>Intern<br>&nbsp;</h1>
+    <h1 id="intern" class="expandable locked_0"><br>Intern<br>&nbsp;</h1>
     <div id="intern_2" class="expanded_container">
 
       <h2 id="todos" class="expandable">Todos</h2>
@@ -411,6 +411,7 @@ function removeClass(elem, clazz) {
         <a id="todo_b" class="locked_0" href="todos.html?key=b"><h3>B</h3></a>
         <a id="todo_16" class="locked_0" href="todos.html?key=16"><h3>U16</h3></a>
         <a id="info_a" class="locked_0" href="info.html?key=a"><h3>Infos A</h3></a>
+        <a id="info_b" class="locked_0" href="info.html?key=b"><h3>Infos U16</h3></a>
       </div>
       
       <h2 id="intern_a" class="expandable">A</h2>
@@ -427,7 +428,7 @@ function removeClass(elem, clazz) {
       </div>
     </div>
 
-    <h1 id="nw" class="expandable" style=""><br>Nachwuchs<br>&nbsp;</h1>
+    <h1 id="nw" class="expandable"><br>Nachwuchs<br>&nbsp;</h1>
     <div id="nw_2" class="expanded_container">
 
       <!--h2 id="u12_21" class="expandable">U12 - Supermini II</h2>
