nw infos, presence

--- a/ov.html
+++ b/ov.html
@@ -460,7 +460,10 @@ function removeClass(elem, clazz) {
         <a id="tagebuch_b" href="diary.html?key=b" class="locked_3"><h3>Trainingstagebuch</h3></a>
         <a id="zeiten_b" href="/training/zeiten_b.html" class="locked_3"><h3>Trainingszeiten</h3></a>
 
-        <a id="schedule_u16_21_1" href="schedule.html?key=u16_21_1"><h3>Spieltermine</h3></a>
+        <a id="results_u16_21_1" href="results.html?key=u16_21_1"><h3>Ergebnisse Gruppe 4</h3></a>
+        <a id="standings_u16_21_1" href="standings.html?key=u16_21_1"><h3>Tabelle Gruppe 4</h3></a>
+        <!--a id="schedule_u16_21_1" href="schedule.html?key=u16_21_1"><h3>Spieltermine</h3></a-->
+        <h3>Viertelfinale: 10./11.4.</h3>
         <a id="players_u16_21_1" href="players.html?key=u16_21_1"><h3>Spielerinnen</h3></a>
       </div>
 
