--- a/_work/statistics/statistics.match.copy.html
+++ b/_work/statistics/statistics.match.copy.html
@@ -4,13 +4,21 @@
   <table class="match" cellspacing="0" cellpadding="2" border="1">
     <tr>
       <th colspan="3">&nbsp;</th>
-{{headers1}}
+      <th colspan="2" class="left">1. Satz</th>
+      <th colspan="2" class="left">2. Satz</th>
+      <th colspan="2" class="left">3. Satz</th>
+      <th colspan="2" class="left">4. Satz</th>
+      <th colspan="2" class="left">5. Satz</th>
       <th>&nbsp;</th>
       <th colspan="4" class="left">Gesamt</th>
     </tr>
     <tr>
       <th colspan="3">&nbsp;</th>
-{{headers2}}
+      <th class="center">+</th><th class="center">-</th>
+      <th class="center">+</th><th class="center">-</th>
+      <th class="center">+</th><th class="center">-</th>
+      <th class="center">+</th><th class="center">-</th>
+      <th class="center">+</th><th class="center">-</th>
       <th>&nbsp;</th>
       <th class="center">+</th><th class="center">-</th>
       <th class="center">Diff</th><th class="center">Quot</th>
