--- a/ov.html
+++ b/ov.html
@@ -360,7 +360,7 @@ function removeClass(elem, clazz) {
         <a id="statistics_u16_4_21" href="/statistics/21/u16_4.html" class="locked_3"><h3>Statistik</h3></a>
 
         <!--a id="schedule_u16_21_1" href="schedule.html?key=u16_21_1"><h3>Spieltermine</h3></a-->
-        <h3>Viertelfinale: 10./11.4.</h3>
+        <h3>Halbfinale: 10. + 11.4.</h3>
         <a id="players_u16_21_1" href="players.html?key=u16_21_1"><h3>Spielerinnen</h3></a>
       </div>
 
@@ -368,6 +368,11 @@ function removeClass(elem, clazz) {
       <div id="u18_21_2" class="expanded_container">
         <a id="info18" href="/info/u18.html"><h3>Infos</h3></a>
         <a id="system6" href="/system6/"><h3>Spielsystem</h3></a>
+        <h3>Termin Gruppe 5: 13.5.</h3>
+        <!--a id="schedule_u18_21_5" href="schedule.html?key=u18_21_5"><h3>Spieltermine</h3></a-->
+        <!--a id="results_u18_21_5" href="results.html?key=u18_21_5"><h3>Ergebnisse</h3></a-->
+        <!--a id="standings_u18_21_5" href="standings.html?key=u18_21_5"><h3>Tabelle</h3></a-->
+        <!--a id="players_u18_21_5" href="players.html?key=u18_21_5"><h3>Spielerinnen</h3></a-->
       </div>
 
       <h2 id="u20_21" class="expandable">U20 - Juniorinnen</h2>
