--- a/ov.html
+++ b/ov.html
@@ -423,13 +423,13 @@ function removeClass(elem, clazz) {
         <a id="schedule_br1sp_21" href="schedule.html?key=br1sp_21"><h3>Spieltermine</h3></a>
         <a id="results_br1sp_21" href="results.html?key=br1sp_21"><h3>Ergebnisse</h3></a>
         <a id="standings_br1sp_21" href="standings.html?key=br1sp_21"><h3>Tabelle</h3></a>
+        <a id="statistics_bl2_21" href="/statistics/21/bhv1_bl2.html" class="locked_1"><h3>Statistik</h3></a>
         <a id="players_br1sp_21" href="players.html?key=br1sp_21"><h3>Spielerinnen</h3></a>
 
         <!--a id="schedule_br1cup_21" href="schedule.html?key=br1cup_21"><h3>Spieltermine (Cup)</h3></a-->
         <a id="results_br1cup_21" href="results.html?key=br1cup_21"><h3>Ergebnisse (Cup)</h3></a>
 
         <a id="standings_br1g_21" href="standings.html?key=br1g_21"><h3>Tabelle (Herbst)</h3></a>
-        <a id="statistics_br1g_21" href="/statistics/21/bhv1_gd.html" class="locked_1"><h3>Statistik (Herbst)</h3></a>
 
         <a id="zeiten_a" href="/training/zeiten_a.html" class="locked_1"><h3>Trainingszeiten</h3></a>
         <!--a id="videofeedback" href="/videofeedback" class="locked_1"><h3>Videofeedback</h3></a-->
