--- a/ov.html
+++ b/ov.html
@@ -421,8 +421,11 @@ function removeClass(elem, clazz) {
         <a id="system1" href="/system1/" class="locked_1"><h3>Spielsystem</h3></a>
 
         <a id="schedule_br1r_21" href="schedule.html?key=br1r_21"><h3>Spieltermine</h3></a>
-        <a id="results_br1sp_21" href="results.html?key=br1sp_21"><h3>Ergebnisse (bisher)</h3></a>
-        <a id="standings_br1sp_21" href="standings.html?key=br1sp_21"><h3>Tabelle</h3></a>
+        <a id="results_br1r_21" href="results.html?key=br1r_21"><h3>Ergebnisse</h3></a>
+       
+        <a id="results_br1sp_21" href="results.html?key=br1sp_21"><h3>Ergebnisse (BL2)</h3></a>
+        <a id="standings_br1sp_21" href="standings.html?key=br1sp_21"><h3>Tabelle (BL2)</h3></a>
+        
         <a id="statistics_bl2_21" href="/statistics/21/bhv1_bl2.html" class="locked_1"><h3>Statistik</h3></a>
         <a id="players_br1sp_21" href="players.html?key=br1sp_21"><h3>Spielerinnen</h3></a>
 
